feat: added documentation in swagger api
